[gd_scene load_steps=5 format=3 uid="uid://sah33a6m5cm8"]

[ext_resource type="Script" uid="uid://dh3b7tvyif2rj" path="res://scripts/menus/pause_menu.gd" id="1_s0u37"]
[ext_resource type="PackedScene" uid="uid://bnvthjaufhn5x" path="res://menus/audio_button.tscn" id="2_p1qj3"]
[ext_resource type="PackedScene" uid="uid://calgaewey8pnp" path="res://menus/menu_audio.tscn" id="3_0wv6w"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0wv6w"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[node name="PauseMenu" type="AspectRatioContainer"]
process_mode = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s0u37")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_top = 64
theme_override_constants/margin_bottom = 64

[node name="VFlowContainer" type="VFlowContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/v_separation = 16
alignment = 1

[node name="PostShader" type="CheckBox" parent="MarginContainer/VFlowContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
button_pressed = true
text = "Post Shader"

[node name="ResumeContainer" type="PanelContainer" parent="MarginContainer/VFlowContainer"]
layout_mode = 2

[node name="Panel" type="PanelContainer" parent="MarginContainer/VFlowContainer/ResumeContainer"]
clip_children = 1
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0wv6w")

[node name="ColorRect" type="ColorRect" parent="MarginContainer/VFlowContainer/ResumeContainer/Panel"]
layout_mode = 2
color = Color(0.2112, 0.33, 0.24090001, 1)

[node name="ResumeButton" parent="MarginContainer/VFlowContainer/ResumeContainer" instance=ExtResource("2_p1qj3")]
layout_mode = 2
text = "Continue"

[node name="ControlsButton" parent="MarginContainer/VFlowContainer" instance=ExtResource("2_p1qj3")]
layout_mode = 2
text = "Controls"

[node name="InventoryButton" parent="MarginContainer/VFlowContainer" instance=ExtResource("2_p1qj3")]
layout_mode = 2
text = "Inventory"

[node name="ObjectivesButton" parent="MarginContainer/VFlowContainer" instance=ExtResource("2_p1qj3")]
layout_mode = 2
text = "Objectives"

[node name="SaveButton" parent="MarginContainer/VFlowContainer" instance=ExtResource("2_p1qj3")]
layout_mode = 2
text = "Save Game"

[node name="LoadButton" parent="MarginContainer/VFlowContainer" instance=ExtResource("2_p1qj3")]
layout_mode = 2
text = "Load Game"

[node name="OptionsButton" parent="MarginContainer/VFlowContainer" instance=ExtResource("2_p1qj3")]
layout_mode = 2
text = "Options"

[node name="MainMenuButton" parent="MarginContainer/VFlowContainer" instance=ExtResource("2_p1qj3")]
layout_mode = 2
text = "Main Menu"

[node name="ExitButton" parent="MarginContainer/VFlowContainer" instance=ExtResource("2_p1qj3")]
layout_mode = 2
text = "Exit"

[node name="MenuAudio" parent="." instance=ExtResource("3_0wv6w")]

[connection signal="toggled" from="MarginContainer/VFlowContainer/PostShader" to="." method="_on_post_shader_toggled"]
[connection signal="pressed" from="MarginContainer/VFlowContainer/ResumeContainer/ResumeButton" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/VFlowContainer/ControlsButton" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="MarginContainer/VFlowContainer/InventoryButton" to="." method="_on_inventory_pressed"]
[connection signal="pressed" from="MarginContainer/VFlowContainer/ObjectivesButton" to="." method="_on_objectives_pressed"]
[connection signal="pressed" from="MarginContainer/VFlowContainer/SaveButton" to="." method="_on_save_game_pressed"]
[connection signal="pressed" from="MarginContainer/VFlowContainer/LoadButton" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="MarginContainer/VFlowContainer/OptionsButton" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VFlowContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="MarginContainer/VFlowContainer/ExitButton" to="." method="_on_exit_pressed"]
